--- a/styl/main.css
+++ b/styl/main.css
@@ -88,7 +88,7 @@ body {
 .compare_block .compare_results.sucess .flag_text {
   color: #986727;
 }
-.compare_block .compare_results.reject .flag {
+.compare_block .compare_results.reject .flag path {
   fill: #666;
 }
 .compare_block .compare_results.reject .flag_text {
