--- a/styl/main.css
+++ b/styl/main.css
@@ -118,11 +118,20 @@ body {
 .orden {
   width: 160px;
   height: 160px;
-  background-position: center !important;
-  background-size: 70% !important;
+  background-position: 50% 30% !important;
+  background-size: 65% !important;
   background-repeat: no-repeat !important;
   border: 1px solid #000;
   margin-right: 15px;
+}
+.orden .orden_title {
+  width: 160px;
+  height: 40px;
+  font: 10pt/12pt 'NevaC';
+  color: #986727;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
 }
 .orden.ui-draggable-dragging {
   border: none;
@@ -149,24 +158,4 @@ body {
   opacity: 1 !important;
   background-size: 93% !important;
   transition: background-size 0.3s linear;
-}
-.person .person_name {
-  display: none;
-  color: #666;
-  width: 395px;
-  position: absolute;
-  font: 14pt/16pt 'NevaC';
-}
-.person .person_name .name_inner {
-  width: 395px;
-  min-height: 60px;
-  position: relative;
-}
-.person .person_name .name_inner .inner_text {
-  width: 395px;
-  text-align: center;
-  white-space: normal;
-  position: absolute;
-  bottom: 0;
-  left: 0;
 }
