--- a/styl/main.styl
+++ b/styl/main.styl
@@ -119,11 +119,20 @@ body
 .orden
 	width 160px
 	height 160px
-	background-position center!important
-	background-size 70%!important
+	background-position 50% 30%!important
+	background-size 65%!important
 	background-repeat no-repeat!important
 	border 1px solid black
 	margin-right 15px
+	.orden_title
+		width 160px
+		height 40px
+		// outline 1px solid red
+		font 10pt/12pt 'NevaC'
+		color #986727
+		text-align center
+		position absolute
+		bottom 0
 	&.ui-draggable-dragging
 		border none
 
@@ -146,21 +155,3 @@ body
 		opacity 1!important
 		background-size 93%!important
 		transition background-size .3s linear
-	.person_name
-		display none
-		color #666666
-		width 395px
-		position absolute
-		font 14pt/16pt 'NevaC'
-		.name_inner
-			width 395px
-			min-height 60px
-			position relative
-			// outline 1px solid red
-			.inner_text
-				width 395px
-				text-align center
-				white-space normal
-				position absolute
-				bottom 0
-				left 0
