--- a/styl/main.styl
+++ b/styl/main.styl
@@ -155,3 +155,21 @@ body
 		opacity 1!important
 		background-size 93%!important
 		transition background-size .3s linear
+	.person_name
+		display none
+		color #666666
+		width 395px
+		position absolute
+		font 14pt/16pt 'NevaC'
+		.name_inner
+			width 395px
+			min-height 60px
+			position relative
+			// outline 1px solid red
+			.inner_text
+				width 395px
+				text-align center
+				white-space normal
+				position absolute
+				bottom 0
+				left 0
