--- a/styl/main.styl
+++ b/styl/main.styl
@@ -49,9 +49,9 @@ body
 					fill black
 			&.next
 				transform scale(-1, 1)
-				right 40px
+				right 60px
 			&.prev
-				left 40px
+				left 60px
 
 .block_persons
 	width 100%
@@ -107,14 +107,14 @@ body
 			margin-left 20px
 			width 690px
 			height 195px
-			&.desc .name
-				margin-top 2px
 			&.compare .name
-				margin-top 27px
+				margin-top 30px
 			.name
-				font 16pt/22pt 'NevaCBold'
+				font 16pt/18pt 'NevaCBold'
 			.years
-				font 14pt/22pt 'NevaC'
+				font 14pt/18pt 'NevaC'
+			.text
+				margin-top 5px
 
 .carousel
 	// outline 1px solid red
