--- a/styl/main.styl
+++ b/styl/main.styl
@@ -133,7 +133,7 @@ body
 	background-position 50% 30%!important
 	background-size 65%!important
 	background-repeat no-repeat!important
-	border 1px solid black
+	border 1px solid #986727
 	margin-right 15px
 	.orden_title
 		width 160px
