--- a/styl/main.styl
+++ b/styl/main.styl
@@ -84,31 +84,20 @@ body
 		height 260px
 		font 12pt/14pt 'NevaC'
 		overflow hidden
-		&.sucess
-			.flag
-				fill #986727
-			.text
-				color #986727
-		&.reject
-			.flag path
-				fill #666666
-			.text
-				color #666666
 		.flag
 			width 335px
 			height 225px
 			display block
 			float left
-			font 16pt/18pt 'NevaCBold'
-			&.desc
-				color #986727
-				padding-top 30px
+			background-size 85%
+			background-position center
+			background-repeat no-repeat
 		.meta
 			float left
 			margin-left 20px
 			width 690px
 			height 195px
-			margin-top 30px
+			margin-top 15px
 			.name
 				font 16pt/18pt 'NevaCBold'
 			.years
@@ -130,15 +119,14 @@ body
 .orden
 	width 160px
 	height 160px
-	background-position 50% 30%!important
+	background-position 50% 25%!important
 	background-size 65%!important
 	background-repeat no-repeat!important
 	border 1px solid #986727
 	margin-right 15px
 	.orden_title
 		width 160px
-		height 40px
-		// outline 1px solid red
+		height 43px
 		font 10pt/12pt 'NevaC'
 		color #986727
 		text-align center
