--- a/styl/main.css
+++ b/styl/main.css
@@ -44,10 +44,10 @@ body {
 }
 .block_ordens .navigate_block .nav.next {
   transform: scale(-1, 1);
-  right: 60px;
+  right: 100px;
 }
 .block_ordens .navigate_block .nav.prev {
-  left: 60px;
+  left: 100px;
 }
 .block_persons {
   width: 100%;
@@ -81,14 +81,14 @@ body {
 }
 .compare_block .compare_results {
   margin: 0 auto;
-  width: 1047px;
+  width: 967px;
   height: 260px;
   font: 12pt/14pt 'NevaC';
   overflow: hidden;
 }
 .compare_block .compare_results .flag {
-  width: 335px;
-  height: 225px;
+  width: 325px;
+  height: 215px;
   display: block;
   float: left;
   background-size: 85%;
@@ -97,8 +97,7 @@ body {
 }
 .compare_block .compare_results .meta {
   float: left;
-  margin-left: 20px;
-  width: 690px;
+  width: 420px;
   height: 195px;
   margin-top: 15px;
 }
@@ -112,7 +111,7 @@ body {
   margin-top: 5px;
 }
 .carousel.ordens {
-  width: 1047px;
+  width: 967px;
   height: 162px;
   margin: 0 auto;
 }
@@ -127,12 +126,11 @@ body {
   background-position: 50% 25% !important;
   background-size: 65% !important;
   background-repeat: no-repeat !important;
-  border: 1px solid #986727;
-  margin-right: 15px;
+  border-left: 1px solid #986727;
 }
 .orden .orden_title {
   width: 160px;
-  height: 43px;
+  height: 33px;
   font: 10pt/12pt 'NevaC';
   color: #986727;
   text-align: center;
