--- a/styl/main.styl
+++ b/styl/main.styl
@@ -49,9 +49,9 @@ body
 					fill black
 			&.next
 				transform scale(-1, 1)
-				right 60px
+				right 100px
 			&.prev
-				left 60px
+				left 100px
 
 .block_persons
 	width 100%
@@ -80,22 +80,23 @@ body
 	.compare_results
 		// border 1px solid red
 		margin 0 auto
-		width 1047px
+		width 967px
 		height 260px
 		font 12pt/14pt 'NevaC'
 		overflow hidden
 		.flag
-			width 335px
-			height 225px
+			width 325px
+			height 215px
 			display block
 			float left
 			background-size 85%
 			background-position center
 			background-repeat no-repeat
 		.meta
+			// border 1px solid red
 			float left
-			margin-left 20px
-			width 690px
+			// margin-left 15px
+			width 420px
 			height 195px
 			margin-top 15px
 			.name
@@ -108,7 +109,7 @@ body
 .carousel
 	// outline 1px solid red
 	&.ordens
-		width 1047px
+		width 967px
 		height 162px
 		margin 0 auto
 	&.persons
@@ -122,11 +123,11 @@ body
 	background-position 50% 25%!important
 	background-size 65%!important
 	background-repeat no-repeat!important
-	border 1px solid #986727
-	margin-right 15px
+	border-left 1px solid #986727
+	// margin-right 15px
 	.orden_title
 		width 160px
-		height 43px
+		height 33px
 		font 10pt/12pt 'NevaC'
 		color #986727
 		text-align center
