--- a/styl/main.styl
+++ b/styl/main.styl
@@ -95,8 +95,8 @@ body
 		.meta
 			// border 1px solid red
 			float left
-			// margin-left 15px
-			width 420px
+			margin-left 25px
+			width 615px
 			height 195px
 			margin-top 15px
 			.name
